# goit-py_web-hw-12

./: .env  alembic.ini  index.html  pyproject.toml
alembic/: env.py
alembic/versions/: 8dbc675feba7_init.py
contacts_api/: auth.py  crud.py  database.py  main.py  models.py  schemas.py  test_db.py
contacts_api/front-end/: index.html  script.js
contacts_api/routers/: auth.py  contacts.py
